@@ -2,7 +2,7 @@ sg3-utils (1.33-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Wed, 03 Aug 2011 22:00:00 -0400
+ -- Doug Gilbert <dgilbert@interlog.com>  Sat, 24 Sep 2011 14:00:00 +0200
 
 sg3-utils (1.32-0.1) unstable; urgency=low
 
